mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_type_args.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_wrong_type_args.mux`
error: Generic type 'Pair' requires 2 type argument(s), got 1
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_wrong_type_args.mux:3:10
   |
 3 | auto p = Pair<int>
   |          ^^^^^^^^^
